packages/envoy-gateway/envoy.yaml
admin:
    access_log_path: "/dev/null"
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 8001
static_resources:
    listeners:
        - address:
              socket_address:
                  address: 0.0.0.0
                  port_value: ${ENVOY_PORT}
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      config:
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: daprinventory_routes
                              virtual_hosts:
                                  - name: daprinventory_backend
                                    domains:
                                        - "*"
                                    cors:
                                        allow_origin_string_match:
                                            - safe_regex:
                                                  google_re2: {}
                                                  regex: \*
                                        allow_methods: "GET, POST, PUT"
                                        allow_headers: "authorization, content-type, x-requestid, x-requested-with, traceparent, tracestate, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform"
                                        allow_credentials: true
                                    routes:
                                        - name: "inventory-api-route"
                                          match:
                                              prefix: "/inventory-api/"
                                          route:
                                              auto_host_rewrite: true
                                              prefix_rewrite: "/v1.0/invoke/inventory-api/method/"
                                              cluster: dapr

                                        - name: "products-api-route"
                                          match:
                                              prefix: "/products-api/"
                                          route:
                                              auto_host_rewrite: true
                                              prefix_rewrite: "/v1.0/invoke/products-api/method/"
                                              cluster: dapr
                                        - name: "tracing-route"
                                          match:
                                              prefix: "/trace"
                                          route:
                                              auto_host_rewrite: true
                                              prefix_rewrite: "/v1/traces"
                                              cluster: tracing
                          http_filters:
                              - name: envoy.filters.http.cors
                              - name: envoy.filters.http.router
                          access_log:
                              - name: envoy.access_loggers.file
                                filter:
                                    not_health_check_filter: {}
                                config:
                                    json_format:
                                        time: "%START_TIME%"
                                        protocol: "%PROTOCOL%"
                                        duration: "%DURATION%"
                                        request_method: "%REQ(:METHOD)%"
                                        request_host: "%REQ(HOST)%"
                                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                                        response_flags: "%RESPONSE_FLAGS%"
                                        route_name: "%ROUTE_NAME%"
                                        upstream_host: "%UPSTREAM_HOST%"
                                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                                    path: "/tmp/access.log"
    clusters:
        - name: dapr
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
              - socket_address:
                    address: ${ENVOY_DAPR_API_ADDRESS}
                    port_value: 3500
        - name: products-api
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
              - socket_address:
                    address: ${ENVOY_PRODUCTS_API_ADDRESS}
                    port_value: 80
        - name: inventory-api
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
              - socket_address:
                    address: ${ENVOY_INVENTORY_API_ADDRESS}
                    port_value: 80
        - name: tracing
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
              - socket_address:
                    address: ${ENVOY_TRACING_API_ADDRESS}
                    port_value: 4318
